Urgency=medium, distro=Buster

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pt-touchscreen-deb (1.0.0-2) buster; urgency=medium
+
+  * Move to Buster
+
+ -- Mike Roberts <mike@pi-top.com>  Tue, 25 Jun 2019 15:10:39 +0100
+
 pt-touchscreen (1.0.0-1) stretch; urgency=low
 
   * Initial release
