--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pt-touchscreen (1.1.0-1) buster; urgency=medium
+
+  * Update dependency: touchegg
+
+ -- Mike Roberts <mike@pi-top.com>  Wed, 07 Oct 2020 17:25:05 +0100
+
 pt-touchscreen (1.0.1-1) buster; urgency=medium
 
   * Move to Buster
