--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pt-touchscreen (2.0.1) buster; urgency=medium
+
+  * Fix install due to missing package relationships
+
+ -- Jorge Capona <jorge@pi-top.com>  Thu, 29 Oct 2020 10:39:27 -0300
+
 pt-touchscreen (2.0.0) buster; urgency=medium
 
   * Migrated touchscreen hotplug support from pt-os-mods
