New changelog entry: v4.2.2-6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pt-touchscreen (4.2.2-6) bullseye; urgency=medium
+
+  * Updated master workflow files
+  * Updated master workflow files
+  * Updated master workflow files
+  * Updated master workflow files
+
+ -- pi-top <deb-maintainers@pi-top.com>  Thu, 23 Jan 2025 21:21:39 +0000
+
 pt-touchscreen (4.2.2-5) bullseye; urgency=medium
 
   * Updated master workflow files
